k8s-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tms-backend
  labels:
    name: tms-backend
