k8s-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tms-backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tms-backend-prod
  ports:
    - port: 8080
      targetPort: 8080
      name: http
