k8s-backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tms-backend-route
  namespace: tms-backend
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - "tms-api.superpart.co.th"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api-tms
      backendRefs:
        - name: tms-backend-service
          port: 8080
